sonarr/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: niklastverdal
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - name: http
              containerPort: 8989
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              memory: 512Mi
